add executorVtuneCollect.sh